cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Enayatullah Norozi
maintainer:         enayathushmand12@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: 
        Utils,
        Day01,
        Day02,
        Day03,
        Day04,
        Day05,
        Day06,
        Day07,
        Day08,
        Day09,
        Day10,
        Day11,
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.1.0,
        deepseq,
        regex-tdfa,
        parsec,
        containers,
        text,
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.1.0,
        aoc2024,
        filepath,
        optparse-applicative,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite aoc2024-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.1.0,
        aoc2024
